// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="sc-x3hd59-0 bCLqwq"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "maxWidth": undefined,
      }
    }
  >
    This is a Button!
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Inline 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="sc-x3hd59-0 iGWvjn"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "maxWidth": undefined,
      }
    }
  >
    This is a Button!
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Skeleton 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kjnynt-0 jfZhXD"
    data-testid="undefined_skeleton"
    id="undefined_skeleton"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <button
      className="sc-x3hd59-0 bCLqwq"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "maxWidth": undefined,
        }
      }
    >
      This is a Button!
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Button Types 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="sc-x3hd59-0 bCLqwq"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "maxWidth": undefined,
      }
    }
    type="button"
  >
    This is a Button!
  </button>
  <button
    className="sc-x3hd59-0 bCLqwq"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "maxWidth": undefined,
      }
    }
    type="reset"
  >
    This is a Button!
  </button>
  <button
    className="sc-x3hd59-0 bCLqwq"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "maxWidth": undefined,
      }
    }
    type="submit"
  >
    This is a Button!
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Variants 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="sc-x3hd59-0 bCLqwq"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "maxWidth": undefined,
      }
    }
  >
    This is a Button!
  </button>
  <button
    className="sc-x3hd59-0 hmIKlY"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "maxWidth": undefined,
      }
    }
  >
    This is a Button!
  </button>
  <button
    className="sc-x3hd59-0 dxJlJF"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "maxWidth": undefined,
      }
    }
  >
    This is a Button!
  </button>
  <button
    className="sc-x3hd59-0 cToKUp"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "maxWidth": undefined,
      }
    }
  >
    This is a Button!
  </button>
</div>
`;
